envoy-sample2.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
  filter_chains:
  - filters:
    - name: envoy.http_connection_manager
      config:
        codec_type: auto
        stat_prefix: ingress_http
        route_config:
          name: local_route
          virtual_hosts:
          - name: backend
            domains:
              - "one.example.com"
              - "www.one.example.com"
            routes:
            - match:
                prefix: "/"
              route:
                cluster: targetCluster
        http_filters:
        - name: envoy.router
